syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "GrpcServiceProduct.ProductVarriant";

service ProductVarriantGrpc {
	rpc GetAll(Empty) returns (ProductVariants);
	rpc GetAllOfProductOption(Id) returns (ProductVariants);
	rpc GetOne(VarriantId) returns (ProductVariant);
	rpc Create(CreateProductVariant) returns (Response);
	rpc Update(ProductVariant) returns (Response);
	rpc Delete(VarriantId) returns (Response);
}

message Empty {}

message ProductVariant {
	google.protobuf.StringValue ProductOptionId = 1;
	google.protobuf.StringValue SizeId = 2;
	double Price = 3;
	int32 Quantity = 4;
}

message CreateProductVariant {
	string ProductOptionId = 1;
	string SizeId = 2;
	int32 Quantity = 3;
	double Price = 4;
}

message Id {
	string SearchId = 1;
}

message Ids {
	repeated Id Item = 1;
}

message VarriantId{
	string ProductOptionId = 1;
	string SizeId = 2;
}

message ProductVariants {
	repeated ProductVariant Item = 1;
}

message Response {
	int32 StatusCode = 1;
	google.protobuf.StringValue Message = 2;
}
